# flask_app_template

./: README.md  app.py  pyproject.toml
src/flask_app_template/: __init__.py
static/: app.js
templates/: b_header.html  hello.html  index.html  layout.html
tests/: test_flask_app_template.py
