[tool.poetry]
name = "flask_app_template"
version = "0.1.0"
description = ""
authors = ["atu4403  <73111778+atu4403@users.noreply.github.com>"]
homepage = "https://github.com/atu4403"
repository = "https://github.com/atu4403/flask_app_template"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | venv
)
'''

[flake8]
max-line-length = 99
